# vocabulary-app

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: package.json
