[package]
name = "vocabulary-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7" }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mongodb = { version = "3.1.0" }
dotenv = "0.15.0"
